--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: 
       - main
-#   pull_request:
+  pull_request:
+    branches:
+      - main 
 #   schedule:
 #     #        ┌───────────── minute (0 - 59)
 #     #        │  ┌───────────── hour (0 - 23)
