--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "js-sha3": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "https://github.com/EC-Nordbund/Leaflet.git",
+    "leaflet-gesture-handling": "^1.2.1",
     "nodemailer": "^6.4.17",
     "nuxt": "2.14.12",
     "nuxt-content-editor": "^1.0.1",
     "remark-html": "^13.0.1",
     "typeface-montserrat": "^1.1.13",
-    "vue2-leaflet-nuxt": "^1.0.9",
+    "vue2-leaflet-nuxt": "^1.1.0",
     "vuetify": "2.3.15",
     "vuetify-icon-injector": "1.3.0"
   },
