--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/composition-api": "^0.18.0",
     "@nuxtjs/pwa": "3.3.4",
+    "@nuxtjs/sitemap": "^2.4.0",
     "ackee-tracker": "^4.2.0",
     "axios": "0.21.1",
     "body-parser": "^1.19.0",
