--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@nuxtjs/composition-api": "^0.18.0",
     "@nuxtjs/pwa": "3.3.4",
     "@nuxtjs/sitemap": "^2.4.0",
-    "ackee-tracker": "^4.2.0",
+    "ackee-tracker": "^5.0.1",
     "axios": "0.21.1",
     "body-parser": "^1.19.0",
     "copy-to-clipboard": "3.3.1",
@@ -37,7 +37,8 @@
     "typeface-montserrat": "^1.1.13",
     "vue2-leaflet-nuxt": "^1.1.0",
     "vuetify": "2.3.15",
-    "vuetify-icon-injector": "1.3.0"
+    "vuetify-icon-injector": "1.3.0",
+    "web-vitals": "^1.1.0"
   },
   "devDependencies": {
     "@lhci/cli": "0.6.x",
