--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,9 @@
 {
-  "extends": [
-    "@nuxtjs"
-  ]
+  "assignees": [
+    "mathe42"
+  ],
+  "branchConcurrentLimit": 0,
+  "configWarningReuseIssue": false,
+  "dependencyDashboard": true,
+  "dependencyDashboardApproval": true
 }
