--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docker:builder": "yarn && yarn build"
   },
   "dependencies": {
+    "@ec-nordbund/nuxt-vue2-leaflet": "^2.1.0",
     "@mdi/js": "5.9.55",
     "@nuxt/content": "1.12.0",
     "@nuxt/typescript-runtime": "2.0.1",
@@ -35,7 +36,6 @@
     "nuxt-content-editor": "1.0.1",
     "remark-html": "13.0.1",
     "typeface-montserrat": "1.1.13",
-    "vue2-leaflet-nuxt": "1.1.1",
     "vuetify": "2.3.15",
     "vuetify-icon-injector": "1.3.0",
     "web-vitals": "1.1.0"
