--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,32 +1,3 @@
 {
-  "extends": [
-    ":pinAllExceptPeerDependencies",
-    ":separateMajorReleases",
-    ":separateMultipleMajorReleases",
-    ":separatePatchReleases",
-    ":renovatePrefix",
-    ":semanticPrefixChore",
-    ":rebaseStalePrs",
-    ":prImmediately",
-    ":disableRateLimiting",
-    ":automergeDigest",
-    ":updateNotScheduled",
-    ":automergeLinters",
-    ":automergeTypes",
-    ":label(deps)",
-    ":assignAndReview(mathe42)",
-    ":enableVulnerabilityAlerts",
-    ":semanticCommits",
-    ":dependencyDashboard",
-    ":dependencyDashboardApproval",
-    "group:recommended",
-    "group:monorepos"
-  ],
-  "configWarningReuseIssue": false,
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
-    }
-  ]
+  "extends": ["@ec-nordbund"]
 }
