--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "inline-css": "3.0.0",
     "js-sha3": "0.8.0",
     "jsonwebtoken": "8.5.1",
-    "leaflet": "https://github.com/EC-Nordbund/Leaflet.git",
-    "leaflet-gesture-handling": "1.2.1",
+    "@ec-nordbund/leaflet": "latest",
+
     "nodemailer": "6.4.17",
     "nuxt": "2.14.12",
     "nuxt-content-editor": "1.0.1",
