--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build && node ./postCssProcessing.mjs",
-    "start": "nuxt-ts start",
+    "dev": "nuxt",
+    "build": "nuxt build && node ./postCssProcessing.mjs",
+    "start": "nuxt start",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style",
@@ -16,10 +16,11 @@
   "dependencies": {
     "@ec-nordbund/leaflet": "1.7.1-436430db4-436430db4",
     "@ec-nordbund/nuxt-vue2-leaflet": "3.2.1",
+    "@ec-nordbund/typescript-module": "^0.2.0",
     "@mdi/js": "5.9.55",
-    "@nuxt/content": "1.13.1",
-    "@nuxt/typescript-runtime": "2.0.1",
-    "@nuxtjs/composition-api": "0.20.2",
+    "@nuxt/content": "1.14.0",
+    "@nuxt/typescript-runtime": "2.1.0",
+    "@nuxtjs/composition-api": "0.22.1",
     "@nuxtjs/pwa": "3.3.5",
     "@nuxtjs/sitemap": "2.4.0",
     "ackee-tracker": "5.0.1",
@@ -29,39 +30,35 @@
     "express": "4.17.1",
     "inline-css": "3.0.0",
     "js-sha3": "0.8.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "6.4.18",
-    "nuxt": "2.14.12",
+    "nuxt": "2.15.3",
     "nuxt-content-editor": "1.0.1",
     "remark-html": "13.0.1",
+    "sass": "^1.32.8",
     "typeface-montserrat": "1.1.13",
     "vuetify": "2.3.15",
-    "vuetify-icon-injector": "1.3.0",
     "web-vitals": "1.1.0"
   },
   "devDependencies": {
+    "@ec-nordbund/vuetify-module": "^0.2.1",
     "@lhci/cli": "0.7.0",
-    "@nuxt/types": "2.14.12",
-    "@nuxt/typescript-build": "2.0.3",
-    "@nuxtjs/eslint-config": "5.0.0",
-    "@nuxtjs/eslint-config-typescript": "5.0.0",
+    "@nuxt/types": "2.15.3",
+    "@nuxt/typescript-build": "2.1.0",
+    "@nuxtjs/eslint-config": "6.0.0",
+    "@nuxtjs/eslint-config-typescript": "6.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
-    "@nuxtjs/stylelint-module": "4.0.0",
-    "@nuxtjs/vuetify": "1.11.3",
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/nodemailer": "6.4.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.20.0",
-    "eslint-config-prettier": "8.0.0",
+    "eslint": "7.21.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "3.3.1",
     "prettier": "2.2.1",
-    "pug": "3.0.0",
-    "pug-plain-loader": "1.1.0",
-    "standard-version": "9.1.1",
-    "stylelint": "13.11.0",
-    "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-standard": "20.0.0"
+    "pug": "3.0.2",
+    "pug-plain-loader": "1.1.0"
   }
 }
