--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "nodemailer": "6.4.18",
     "nuxt": "2.15.3",
     "nuxt-content-editor": "1.0.1",
-    "remark-html": "13.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "sass": "^1.32.8",
     "sass-loader": "10",
     "typeface-montserrat": "1.1.13",
