--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,13 @@
-yarnPath: ".yarn/releases/yarn-berry.js"
-
 packageExtensions:
-  "@nuxt/content@*":
-    dependencies:
-      json5: "*"
-  
   "@nuxt/babel-preset-app@*":
     dependencies:
       sass-loader: "*"
+  "@nuxt/content@*":
+    dependencies:
+      json5: "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-berry.js
