--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
   "dependencies": {
     "@ec-nordbund/leaflet": "1.7.1-436430db4-436430db4",
     "@ec-nordbund/nuxt-vue2-leaflet": "3.2.1",
-    "@ec-nordbund/typescript-module": "^0.2.0",
     "@fontsource/montserrat": "^4.2.2",
     "@mdi/js": "5.9.55",
     "@nuxt/content": "^1.14.0",
     "@nuxt/typescript-runtime": "2.1.0",
     "@nuxtjs/composition-api": "0.22.1",
-    "@nuxtjs/pwa": "3.3.5",
     "@nuxtjs/sitemap": "2.4.0",
     "ackee-tracker": "5.0.1",
     "axios": "0.21.1",
@@ -48,7 +46,6 @@
     "@ec-nordbund/vuetify-module": "^0.3.6",
     "@lhci/cli": "0.7.0",
     "@nuxt/types": "2.15.3",
-    "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/eslint-config": "6.0.0",
     "@nuxtjs/eslint-config-typescript": "6.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
@@ -65,6 +62,7 @@
     "prettier": "2.2.1",
     "pug": "3.0.2",
     "pug-plain-loader": "1.1.0",
+    "typescript": "^4.2.3",
     "webpack": "4.46.0"
   }
 }
