--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "ackee-tracker": "5.0.1",
     "axios": "0.21.1",
     "body-parser": "1.19.0",
-    "copy-to-clipboard": "3.3.1",
     "express": "4.17.1",
     "fiber": "^1.0.4",
     "inline-css": "3.0.0",
     "js-sha3": "0.8.0",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.1",
     "nodemailer": "6.5.0",
     "nuxt": "2.15.3",
     "nuxt-content-editor": "1.0.1",
@@ -43,6 +43,7 @@
     "web-vitals": "1.1.1"
   },
   "devDependencies": {
+    "@ec-nordbund/typescript-module": "^0.2.0",
     "@ec-nordbund/vuetify-module": "^0.3.6",
     "@lhci/cli": "0.7.0",
     "@nuxt/types": "2.15.3",
@@ -52,6 +53,7 @@
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.35",
     "@types/nodemailer": "6.4.1",
     "babel-eslint": "10.1.0",
     "eslint": "7.22.0",
@@ -59,6 +61,7 @@
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "3.3.1",
     "fs-extra": "^9.1.0",
+    "nuxt-build-optimisations": "^1.0.2",
     "prettier": "2.2.1",
     "pug": "3.0.2",
     "pug-plain-loader": "1.1.0",
