update some deps, peer deps

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdi/js": "5.9.55",
     "@nuxt/content": "^1.14.0",
     "@nuxt/typescript-runtime": "2.1.0",
+    "@nuxt/vue-app": "^2.15.3",
     "@nuxtjs/composition-api": "0.22.1",
     "@nuxtjs/sitemap": "2.4.0",
     "ackee-tracker": "5.0.1",
@@ -33,17 +34,17 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "6.5.0",
     "nuxt": "2.15.3",
-    "nuxt-content-editor": "1.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.32.8",
     "sass-loader": "10.1.1",
     "typeface-montserrat": "1.1.13",
-    "vuetify": "2.4.6",
+    "vue": "^2.6.12",
+    "vuetify": "2.4.7",
     "web-vitals": "1.1.1"
   },
   "devDependencies": {
-    "@ec-nordbund/typescript-module": "^0.2.0",
+    "@ec-nordbund/typescript-module": "^0.4.0",
     "@ec-nordbund/vuetify-module": "^0.3.6",
     "@lhci/cli": "0.7.0",
     "@nuxt/types": "2.15.3",
@@ -52,7 +53,7 @@
     "@nuxtjs/eslint-module": "3.0.2",
     "@types/body-parser": "1.19.0",
     "@types/express": "4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
     "@types/nodemailer": "6.4.1",
     "babel-eslint": "10.1.0",
@@ -60,7 +61,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-prettier": "3.3.1",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "8.1.0",
     "nuxt-build-optimisations": "^1.0.2",
     "prettier": "2.2.1",
     "pug": "3.0.2",
