--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,26 @@
 packageExtensions:
   "@nuxt/babel-preset-app@*":
     dependencies:
-      sass-loader: "*"
+      sass-loader: "10"
+      webpack: "4"
   "@nuxt/content@*":
     dependencies:
       json5: "*"
+  "@nuxt/types@*":
+    dependencies:
+      webpack: "4"
+  nuxt-build-optimisations@*:
+    dependencies:
+      webpack: "4"
+  "@nuxtjs/eslint-config-typescript@*":
+    dependencies:
+      eslint: "*"
+  "eslint-plugin-nuxt@*":
+    dependencies:
+      eslint: "*"
+  "@nuxtjs/eslint-module@*":
+    dependencies:
+      webpack: "4"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
