--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nuxt/vue-app": "^2.15.3",
     "@nuxtjs/composition-api": "0.22.1",
     "@nuxtjs/sitemap": "2.4.0",
-    "ackee-tracker": "5.0.1",
+    "ackee-tracker": "https://github.com/electerious/ackee-tracker.git#develop",
     "axios": "0.21.1",
     "body-parser": "1.19.0",
     "express": "4.17.1",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@ec-nordbund/typescript-module": "^0.4.0",
-    "@ec-nordbund/vuetify-module": "^0.4.0",
+    "@ec-nordbund/vuetify-module": "^0.4.2",
     "@lhci/cli": "0.7.0",
     "@nuxt/types": "2.15.3",
     "@nuxtjs/eslint-config": "6.0.0",
@@ -63,6 +63,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "fs-extra": "8.1.0",
     "nuxt-build-optimisations": "^1.0.2",
+    "package-info": "^4.0.0",
     "prettier": "2.2.1",
     "pug": "3.0.2",
     "pug-plain-loader": "1.1.0",
