update some deps

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,13 @@ fileToDownload.json
 
 sw.*
 confirm
+
+
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
