remove sucher, fix fetch, add plz + losungs api

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -21,6 +21,9 @@ packageExtensions:
   "@nuxtjs/eslint-module@*":
     dependencies:
       webpack: "4"
+  "nuxt@*":
+    dependencies:
+      consola: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
