--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -24,6 +24,9 @@ packageExtensions:
   "nuxt@*":
     dependencies:
       consola: "*"
+  "@nuxt/core@*":
+    dependencies:
+      unplugin-vue2-script-setup: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
