--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,12 @@ jobs:
         run: yarn
 
       - name: Build
-        run: yarn build
+        run: yarn generate
         env:
           CI: true
+
+      - name: OutCheck
+        run: cd dist && ll
 
       - name: Lighthouse Audits
         run: |
