--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@master
+        with:
+          submodules: true
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
