--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -27,6 +27,9 @@ packageExtensions:
   "@nuxt/core@*":
     dependencies:
       unplugin-vue2-script-setup: "*"
+  "@nuxtjs/composition-api@*":
+    dependencies:
+      unplugin-vue2-script-setup: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
