--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,13 @@ jobs:
         node: [14]
 
     steps:
+      - uses: pnpm/action-setup@35ab4267a1a21c8e8cb1c087cf1642e891ff57bd
+        with:
+          version: 6.27.1
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          cache: 'pnpm'
 
       - name: checkout
         uses: actions/checkout@master
@@ -22,10 +26,10 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn
+        run: pnpm i
 
       - name: Build
-        run: yarn generate
+        run: pnpm run generate
         env:
           CI: true
 
