--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Lighthouse Audits
         run: |
-          yarn lhci autorun
+          pnpm lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
           LHCI_TOKEN: ${{secrets.LHCI_TOKEN}}
