--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxt/vue-app": "2.15.8",
     "@nuxtjs/composition-api": "0.32.0",
     "@nuxtjs/sitemap": "2.4.0",
+    "@vue/composition-api": "^1.4.9",
     "ackee-tracker": "*",
     "axios": "0.26.0",
     "body-parser": "1.19.2",
@@ -63,6 +64,7 @@
     "eslint-plugin-nuxt": "3.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "fs-extra": "10.0.1",
+    "https-localhost": "^4.7.1",
     "nuxt-build-optimisations": "1.0.7",
     "package-info": "4.0.1",
     "prettier": "2.5.1",
