--- a/.github/workflows/test_repo_dispatch.yml
+++ b/.github/workflows/test_repo_dispatch.yml
@@ -11,19 +11,6 @@ jobs:
     steps:
       - name: Checkout submodule
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.DISPATCH_HOOK_TOKEN }}
-          submodules: true
-
-      - name: Update submodules content
-        run: git submodule update --remote --recursive
-
-      - name: Pull the content
-        run: git pull
-        
-      - name: Update submodules index
-        uses: stefanzweifel/git-auto-commit-action@v4.13.1
-        with:
-          commit_message: apply automatic changed content
-          # branch: static
+      
+      - run: echo "Content updated"
           
