--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: 14
       - uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Install dependencies
         run: yarn
 
