--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,9 @@ jobs:
           CI: true
           
       - name: debug
-        run: ls -l
+        run: ls -l dist
       - name: Remove Symlinks
-        run: unlink ./dist/blog && unlink ./dist/veranstaltungen && unlink ./dist/downloads
+        run: rm -r ./dist/blog && rm -r ./dist/veranstaltungen && rm -r ./dist/downloads
       - name: Copy symlink content
         run: cp -r ./content-cms/static/blog ./dist/blog && cp -r ./content-cms/static/veranstaltungen ./dist/veranstaltungen && cp -r ./content-cms/static/downloads ./dist/downloads
 
