--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Deploy Website
+name: Test Website
 
 on:
   push:
@@ -39,7 +39,7 @@ jobs:
           cp -r ./_old ./dist/old
       - name: Deploy to ec-nordbund.de
         env:
-          dest: 'deployer@ec-nordbund.de:/samba_share/www.ec-nordbund.de'
+          dest: 'deployer@ec-nordbund.de:/samba_share/lighthouse.ec-nordbund.de'
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > deploy_key
           chmod 600 ./deploy_key
