--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ concurrency: deploy_preview
 env:
   EC_IS_MAIN_PUSH: ${{github.event_name == 'push' && github.ref_name == 'static'}}
   EC_IS_DEV_PREVIEW: ${{github.event_name == 'push' && github.ref_name != 'static'}}
-  EC_IS_EDIT_PREVIEW: ${{!env.EC_IS_MAIN_PUSH && !env.EC_IS_DEV_PREVIEW}}
-  EC_SET_BASE: ${{(env.EC_IS_MAIN_PUSH && '/') || (env.EC_IS_DEV_PREVIEW && '/${{github.ref_name}}/') || (env.EC_IS_EDIT_PREVIEW && '/${github.event.client_payload.branch}/')}}
-  EC_TARGET_DEPLOY: ${{(env.EC_IS_MAIN_PUSH || 'www.ec-nordbund.de') || (env.EC_IS_DEV_PREVIEW || 'dev.ec-nordbund.de') || (env.EC_IS_EDIT_PREVIEW || 'preview.ec-nordbund.de')}}${{env.EC_SET_BASE}}
-  EC_WITH_LH: ${{env.EC_IS_MAIN_PUSH || env.EC_IS_DEV_PREVIEW}}
+  EC_IS_EDIT_PREVIEW: ${{github.event_name != 'push'}}
+  EC_SET_BASE: ${{((github.event_name == 'push' && github.ref_name == 'static') && '/') || ((github.event_name == 'push' && github.ref_name != 'static') && '/${{github.ref_name}}/') || ((github.event_name != 'push') && '/${{github.event.client_payload.branch}}/')}}
+  EC_TARGET_DEPLOY: ${{((github.event_name == 'push' && github.ref_name == 'static') || 'www') || ((github.event_name == 'push' && github.ref_name != 'static') || 'dev') || ((github.event_name != 'push') || 'preview')}}
+  EC_WITH_LH: ${{github.event_name == 'push'}}
 
 jobs:
   build:
@@ -66,7 +66,7 @@ jobs:
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > deploy_key
           chmod 600 ./deploy_key
-          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/${{EC_TARGET_DEPLOY}}"
+          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/${{EC_TARGET_DEPLOY}}.ec-nordbund.de${{EC_SET_BASE}}"
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
             ./dist/ ${{ env.dest }}
