--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
   lh_deploy:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{env.EC_WITH_LH}}
+    if: env.EC_WITH_LH == true
     steps:
       - uses: actions/download-artifact@v3
         with:
