--- a/.github/workflows/preview_deploy.yml
+++ b/.github/workflows/preview_deploy.yml
@@ -1,15 +1,24 @@
-name: Deploy Preview
+name: CI
 
-on: [push]
+on:
+  push:
+  repository_dispatch:
+    types: [merge-content]
 
-concurrency: deploy_preview
+concurrency: ci
+
+env:
+  EC_IS_MAIN_PUSH: ${{github.event_name == 'push' && github.ref_name == 'static'}}
+  EC_IS_DEV_PREVIEW: ${{github.event_name == 'push' && github.ref_name != 'static'}}
+  EC_IS_EDIT_PREVIEW: ${{github.event_name != 'push'}}
+  EC_SET_BASE: ${{((github.event_name == 'push' && github.ref_name == 'static') && '/') || ((github.event_name == 'push' && github.ref_name != 'static') && '/${{github.ref_name}}/') || ((github.event_name != 'push') && '/${{github.event.client_payload.branch}}/')}}
+  EC_TARGET_DEPLOY: ${{((github.event_name == 'push' && github.ref_name == 'static') || 'www') || ((github.event_name == 'push' && github.ref_name != 'static') || 'dev') || ((github.event_name != 'push') || 'preview')}}
 
 jobs:
-  deploy_job:
+  build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - run: echo ${{github.event_name}}
       - uses: actions/setup-node@v2
         with:
           node-version: 14
@@ -18,13 +27,11 @@ jobs:
           submodules: true
       - name: Install dependencies
         run: yarn
-
       - name: Build
+        run: yarn build
+      - name: Generate
         run: yarn generate
-        env:
-          CI: true
-          EC_SET_BASE: /${{ github.ref_name }}/
-      - name: smylinks
+      - name: Symlinks
         run: |
           cp -r ./cms-content/static/blog ./_blog
           cp -r ./cms-content/static/veranstaltungen ./_veranstaltungen
@@ -37,13 +44,68 @@ jobs:
           cp -r ./_veranstaltungen ./dist/veranstaltungen
           cp -r ./_download ./dist/download
           cp -r ./_old ./dist/old
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: ./dist/
+          retention-days: 1
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+        
       - name: Deploy to ec-nordbund.de
         env:
-          dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.ref_name }}'
+          dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > deploy_key
           chmod 600 ./deploy_key
-          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/preview.ec-nordbund.de/${{ github.ref_name }}"
+          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}"
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            ./dist/ ${{ env.dest }}
+            ./dist/ /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}
+  
+  lh_deploy:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    if: github.event_name == 'push'
+    concurrency: lighthouse
+    steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+
+      - name: Deploy to ec-nordbund.de
+        env:
+          dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
+        run: |
+          echo "${{secrets.DEPLOY_KEY}}" > deploy_key
+          chmod 600 ./deploy_key
+          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/lighthouse.ec-nordbund.de"
+          rsync -chrvz --stats --delete \
+            -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
+            ./dist/ /samba_share/lighthouse.ec-nordbund.de
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Lighthouse Audits
+        run: |
+          yarn lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
+          LHCI_TOKEN: ${{secrets.LHCI_TOKEN}}
+          CI: true
