--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,6 @@ on:
   repository_dispatch:
     types: [merge-content]
 
-concurrency: deploy_preview
-
 env:
   EC_IS_MAIN_PUSH: ${{github.event_name == 'push' && github.ref_name == 'static'}}
   EC_IS_DEV_PREVIEW: ${{github.event_name == 'push' && github.ref_name != 'static'}}
@@ -68,18 +66,26 @@ jobs:
           ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}"
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            ./dist/ ${{ env.dest }}
+            ./dist/ /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}
   
   lh_deploy:
     runs-on: ubuntu-latest
     needs: [ build ]
     if: github.event_name == 'push'
+    concurrency: lighthouse
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: checkout
+        uses: actions/checkout@v2
+
       - uses: actions/download-artifact@v3
         with:
           name: dist
           path: ./dist
-        
+
       - name: Deploy to ec-nordbund.de
         env:
           dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
@@ -89,18 +95,7 @@ jobs:
           ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/lighthouse.ec-nordbund.de"
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            ./dist/ ${{ env.dest }}  
-    
-  lh_runner:
-    runs-on: ubuntu-latest
-    needs: [ lh_deploy ]
-    steps:
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: checkout
-        uses: actions/checkout@v2
+            ./dist/ /samba_share/lighthouse.ec-nordbund.de
 
       - name: Install dependencies
         run: yarn
