--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,14 @@ on:
   repository_dispatch:
     types: [merge-content]
 
+concurrency: ci-${{ github.ref }}
+
 env:
-  EC_IS_MAIN_PUSH: ${{github.event_name == 'push' && github.ref_name == 'static'}}
-  EC_IS_DEV_PREVIEW: ${{github.event_name == 'push' && github.ref_name != 'static'}}
-  EC_IS_EDIT_PREVIEW: ${{github.event_name != 'push'}}
   EC_SET_BASE: ${{((github.event_name == 'push' && github.ref_name == 'static') && '/') || ((github.event_name == 'push' && github.ref_name != 'static') && '/${{github.ref_name}}/') || ((github.event_name != 'push') && '/${{github.event.client_payload.branch}}/')}}
   EC_TARGET_DEPLOY: ${{((github.event_name == 'push' && github.ref_name == 'static') || 'www') || ((github.event_name == 'push' && github.ref_name != 'static') || 'dev') || ((github.event_name != 'push') || 'preview')}}
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     
     steps:
@@ -42,21 +41,6 @@ jobs:
           cp -r ./_veranstaltungen ./dist/veranstaltungen
           cp -r ./_download ./dist/download
           cp -r ./_old ./dist/old
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: ./dist/
-          retention-days: 1
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [ build ]
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: ./dist
-        
       - name: Deploy to ec-nordbund.de
         env:
           dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
@@ -67,26 +51,8 @@ jobs:
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
             ./dist/ /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}
-  
-  lh_deploy:
-    runs-on: ubuntu-latest
-    needs: [ build ]
-    if: github.event_name == 'push'
-    concurrency: lighthouse
-    steps:
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: ./dist
-
       - name: Deploy to ec-nordbund.de
+        if: github.event_name == 'push'
         env:
           dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
         run: |
@@ -96,13 +62,9 @@ jobs:
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
             ./dist/ /samba_share/lighthouse.ec-nordbund.de
-
-      - name: Install dependencies
-        run: yarn
-
       - name: Lighthouse Audits
-        run: |
-          yarn lhci autorun
+        if: github.event_name == 'push'
+        run: yarn lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
           LHCI_TOKEN: ${{secrets.LHCI_TOKEN}}
