--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,27 +45,37 @@ jobs:
           cp -r ./_veranstaltungen ./dist/veranstaltungen
           cp -r ./_download ./dist/download
           cp -r ./_old ./dist/old
-      - name: Deploy to ec-nordbund.de
+
+      - name: Setup deploy
         env:
           dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > deploy_key
           chmod 600 ./deploy_key
-          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}"
+
+      - name: Ensure Folder
+        if: github.event_name != 'push' || github.ref_name != 'static'
+        run: ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}"
+
+      - name: Deploy to ec-nordbund.de
+        run: |
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            ./dist/ /samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}
-      - name: Deploy to ec-nordbund.de
+            ./dist/ deployer@ec-nordbund.de:/samba_share/${{env.EC_TARGET_DEPLOY}}.ec-nordbund.de${{env.EC_SET_BASE}}
+
+      - name: Re-Generate for Lighthouse
+        run: yarn generate
+        if: github.event_name == 'push' && github.ref_name != 'static'
+        env:
+          EC_SET_BASE: /
+
+      - name: Deploy to lighthouse.ec-nordbund.de
         if: github.event_name == 'push'
-        env:
-          dest: 'deployer@ec-nordbund.de:/samba_share/preview.ec-nordbund.de/${{ github.event.client_payload.branch }}'
         run: |
-          echo "${{secrets.DEPLOY_KEY}}" > deploy_key
-          chmod 600 ./deploy_key
-          ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p /samba_share/lighthouse.ec-nordbund.de"
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            ./dist/ /samba_share/lighthouse.ec-nordbund.de
+            ./dist/ deployer@ec-nordbund.de:/samba_share/lighthouse.ec-nordbund.de
+
       - name: Lighthouse Audits
         if: github.event_name == 'push'
         run: yarn lhci autorun
