--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,7 +33,7 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'published', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Haupt-Bild', name: 'featuredImage', widget: 'image', media_folder: '/static/img/blog', choose_url: false }
+      - { label: 'Haupt-Bild', name: 'featuredImage', widget: 'image', media_folder: '/static/img/veranstaltungen', public_folder: '/img/veranstaltungen', choose_url: false, allow_multiple: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'veranstaltungen'
     label: 'Veranstaltungen'
