--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,8 @@ backend:
 
 
 publish_mode: editorial_workflow
+site_url: https://preview.ec-nordbund.de/
+show_preview_links: true
 
 media_folder: static/img
 public_folder: /img
@@ -26,6 +28,7 @@ collections:
     create: true
     delete: false
     slug: '{{year}}-{{slug}}'
+    preview_path: "blog/{{year}}-{{slug}}"
     extension: md
     editor:
       preview: false
@@ -42,6 +45,7 @@ collections:
     create: true
     delete: false
     slug: '{{year}}{{slug}}'
+    preview_path: "veranstaltungen/{{year}}{{slug}}"
     extension: md
     editor:
       preview: false
