--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: debug
+        run: |
+          cd cms-content
+          git branch -avv
+          git remote
       - name: Select cms-version
         run: |
-          git submodule foreach git checkout ${{github.event.client_payload.branch}}
-          git submodule foreach git pull origin ${{github.event.client_payload.branch}}
+          git submodule foreach git checkout -b ${{github.event.client_payload.branch}} --track origin/${{github.event.client_payload.branch}}
         if: github.event_name != 'push'
       - name: Install dependencies
         run: yarn
