--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       - name: debug
         run: |
           cd cms-content
+          git fetch
           git branch -avv
           git remote
       - name: Select cms-version
